--- a/css/portofolio.css
+++ b/css/portofolio.css
@@ -191,7 +191,7 @@ a:hover {
   padding: 0 60px;
 }
 
-.portofolio-buttons .button {
+.button {
   color: #212121;
   text-align: center;
   font-family: Roboto;
@@ -200,12 +200,17 @@ a:hover {
   font-weight: 500;
   line-height: 26px;
   letter-spacing: 0.48px;
+  border-radius: 4px;
+  background: #f5f4fa;
+  border: none;
   cursor: pointer;
 }
 .button:hover,
 .button:focus {
-  background-color: #2196f3;
   color: #ffffff;
+  background: #2196f3;
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
+    0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
 }
 .portofolio-container {
   display: flex;
