--- a/css/portofolio.css
+++ b/css/portofolio.css
@@ -245,6 +245,7 @@ a:hover {
   margin-top: 50px;
 }
 .proiect {
+  position: relative;
   width: 370px;
   height: 404px;
   flex-shrink: 0;
@@ -252,6 +253,11 @@ a:hover {
   background: #fff;
   box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16),
     0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
+}
+
+.photo-title {
+  padding-left: 24px;
+  padding-right: 24px;
 }
 
 .image-title {
@@ -263,6 +269,7 @@ a:hover {
   font-weight: 700;
   line-height: 36px;
   letter-spacing: 1.08px;
+  margin-bottom: 0;
 }
 
 .image-description {
@@ -274,6 +281,7 @@ a:hover {
   font-weight: 400;
   line-height: 30px;
   letter-spacing: 0.48px;
+  margin-top: 0;
 }
 
 /*--footer--*/
