--- a/css/portofolio.css
+++ b/css/portofolio.css
@@ -159,10 +159,11 @@ a:hover {
   flex-shrink: 0;
 }
 
-.envelop-icons:hover,
-.envelop-icons:focus {
+.external-link-header-mail:hover,
+.external-link-header-mail:focus {
   fill: #2196f3;
 }
+
 .external-link-header-phone {
   position: absolute;
   display: inline-flex;
@@ -177,10 +178,9 @@ a:hover {
   height: 16px;
   flex-shrink: 0;
 }
-.phone-icons:hover,
-.phone-icons:focus {
+.external-link-header-phone:hover,
+.external-link-header-phone:focus {
   stroke: #2196f3;
-  fill: #2196f3;
 }
 .phone-header {
   color: #757575;
@@ -231,8 +231,8 @@ a:hover {
 .button:focus {
   color: #ffffff;
   background: #2196f3;
-  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
-    0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.5),
+    0px 1px 2px 0px rgba(0, 0, 0, 0.5), 0px 3px 1px 0px rgba(0, 0, 0, 0.5);
 }
 .portofolio-container {
   display: flex;
@@ -254,7 +254,42 @@ a:hover {
   box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16),
     0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
 }
-
+.overlay {
+  position: relative;
+  width: 370px;
+  height: 294px;
+  flex-shrink: 0;
+}
+.image_portofolio {
+  width: 100%;
+}
+.image__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(33, 150, 243, 0.9);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 63px 24px 91px;
+  opacity: 0;
+  transition: cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+}
+.image__overlay:hover {
+  opacity: 1;
+}
+.text-image-portofolio {
+  color: #fff;
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px; /* 155.556% */
+  letter-spacing: 0.54px;
+}
 .photo-title {
   padding-left: 24px;
   padding-right: 24px;
