--- a/css/portofolio.css
+++ b/css/portofolio.css
@@ -27,6 +27,8 @@ a:link {
 }
 a:hover {
   color: #2196f3;
+  transition: 0.5s ease;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .active {
   font-family: "Roboto";
@@ -120,16 +122,17 @@ a:hover {
   position: absolute;
   border-radius: 2px;
   background: #2196f3;
-  height: 3px;
-  width: 0;
+  width: 65px;
+  height: 4px;
+  flex-shrink: 0;
   left: 0;
   top: 45px;
 }
-.underline:hover::after {
+/* .underline:hover::after {
   width: 100%;
   transition-duration: -250ms;
   transition: cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
 .external-link-header-mail {
   position: absolute;
@@ -162,6 +165,8 @@ a:hover {
 .external-link-header-mail:hover,
 .external-link-header-mail:focus {
   fill: #2196f3;
+  transition: 0.5s ease;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .external-link-header-phone {
@@ -181,6 +186,8 @@ a:hover {
 .external-link-header-phone:hover,
 .external-link-header-phone:focus {
   stroke: #2196f3;
+  transition: 0.5s ease;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .phone-header {
   color: #757575;
@@ -233,6 +240,8 @@ a:hover {
   background: #2196f3;
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.5),
     0px 1px 2px 0px rgba(0, 0, 0, 0.5), 0px 3px 1px 0px rgba(0, 0, 0, 0.5);
+  transition: 0.8s ease;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portofolio-container {
   display: flex;
@@ -261,27 +270,34 @@ a:hover {
   flex-shrink: 0;
 }
 .image_portofolio {
+  display: block;
   width: 100%;
+  height: auto;
 }
 .image__overlay {
   position: absolute;
-  top: 0;
+  bottom: 0;
   left: 0;
+  right: 0;
   width: 100%;
-  height: 100%;
+  height: 0;
   background: rgba(33, 150, 243, 0.9);
+  overflow: hidden;
   display: flex;
   align-items: center;
-  justify-content: center;
-  padding: 63px 24px 91px;
+  justify-content: flex-end;
   opacity: 0;
-  transition: cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
+  transition: 0.9s ease;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.image__overlay:hover {
+.proiect:hover .image__overlay {
   opacity: 1;
+  height: 100%;
 }
 .text-image-portofolio {
+  width: 322px;
+  position: absolute;
   color: #fff;
   font-family: Roboto;
   font-size: 18px;
@@ -431,4 +447,6 @@ a:hover {
 .icon-footer:hover,
 .icon-footer:focus {
   background-color: #2196f3;
+  transition: 0.6s ease;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
