--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,8 @@ a:link {
 }
 a:hover {
   color: #2196f3;
+  transition: 0.5s ease;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .active {
   font-family: "Roboto";
@@ -124,16 +126,17 @@ a:hover {
   position: absolute;
   border-radius: 2px;
   background: #2196f3;
-  height: 3px;
-  width: 0;
+  width: 44px;
+  height: 4px;
+  flex-shrink: 0;
   left: 0;
   top: 45px;
 }
-.underline:hover::after {
+/* .underline:hover::after {
   width: 100%;
   transition-duration: -250ms;
   transition: cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
 .external-link-header-mail {
   position: absolute;
@@ -165,6 +168,8 @@ a:hover {
 .external-link-header-mail:hover,
 .external-link-header-mail:focus {
   fill: #2196f3;
+  transition: 0.5s ease;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .external-link-header-phone {
   position: absolute;
@@ -183,6 +188,8 @@ a:hover {
 .external-link-header-phone:hover,
 .external-link-header-phone:focus {
   stroke: #2196f3;
+  transition: 0.5s ease;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .phone-header {
   color: #757575;
@@ -244,7 +251,9 @@ a:hover {
 
 .first-button:hover,
 .first-button:focus {
-  transform: scale(1.03);
+  transform: scale(1.04);
+  transition: 0.8s ease;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* section Features */
 
@@ -567,11 +576,13 @@ a:hover {
   fill: #757575;
 }
 .elipse:hover,
-.icon-member:hover,
+.elipse:hover .icon-member,
 .elipse:focus,
-.icon-member:focus {
-  background-color: #2196f3;
+.elipse:focus .icon-member {
   fill: #ffffff;
+  background-color: #2196f3;
+  transition: 0.5s ease-out;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* regular clients  */
@@ -621,12 +632,13 @@ a:hover {
   flex-shrink: 0;
   fill: #afb1b8;
 }
-.client:hover,
-.svg-clients:hover,
+.client:hover .svg-clients,
 .client:hover,
 .svg-clients:focus {
   fill: #2196f3;
   border-color: #2196f3;
+  transition: 0.4s ease;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 /*--footer--*/
 
@@ -740,6 +752,8 @@ a:hover {
 .icon-footer:hover,
 .icon-footer:focus {
   background-color: #2196f3;
+  transition: 0.6s ease;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal {
   position: fixed; /* Stay in place */
