--- a/css/styles.css
+++ b/css/styles.css
@@ -581,7 +581,7 @@ a:hover {
 .elipse:focus .icon-member {
   fill: #ffffff;
   background-color: #2196f3;
-  transition: 0.5s ease-out;
+  transition-delay: 0.5s;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -637,7 +637,7 @@ a:hover {
 .svg-clients:focus {
   fill: #2196f3;
   border-color: #2196f3;
-  transition: 0.4s ease;
+  transition-delay: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 /*--footer--*/
@@ -752,7 +752,7 @@ a:hover {
 .icon-footer:hover,
 .icon-footer:focus {
   background-color: #2196f3;
-  transition: 0.6s ease;
+  transition-delay: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal {
